# dt-core-cps

./: README.md
anti_instagram/: package.xml  setup.cfg  setup.py
anti_instagram/anti_instagram/: anti_instagram_node.py
anti_instagram/config/: default.yaml
anti_instagram/launch/: anti_instagram_node.launch.xml
fsm/: package.xml  setup.cfg  setup.py
fsm/config/: default.yaml  logic_gate_default.yaml
fsm/fsm/: fsm_node.py  logic_gate_node.py
fsm/launch/: fsm_node.launch.xml  logic_gate_node.launch.xml
generic_line_detector/: package.xml  setup.cfg  setup.py
generic_line_detector/config/: default.yaml
generic_line_detector/generic_line_detector/: __init__.py  generic_line_detector_node.py
generic_line_detector/generic_line_detector/include/: __init__.py  generic_line_detector.py
generic_line_detector/launch/: generic_line_detector_node.launch.xml
ground_projection/: package.xml  setup.py
ground_projection/config/: default.yaml
ground_projection/ground_projection/: ground_projection_node.py
ground_projection/launch/: ground_projection_node.launch.xml
lane_control/: package.xml  setup.py
lane_control/config/: default.yaml
lane_control/lane_control/: controller.py  lane_controller_node.py
lane_control/launch/: lane_controller_node.launch.xml
lane_filter/: package.xml  setup.py
lane_filter/config/: default.yaml
lane_filter/lane_filter/: lane_filter.py  lane_filter_node.py  lane_filter_test_node.py
lane_filter/lane_filter/include/: __init__.py  lane_filter_interface.py
lane_filter/launch/: lane_filter_node.launch.xml  lane_filter_test.launch.xml
line_detector/: package.xml  setup.py
line_detector/config/: default.yaml
line_detector/launch/: line_detector_node.launch.xml
line_detector/line_detector/: __init__.py  line_detector_node.py
line_detector/line_detector/include/: __init__.py  color_range.py  detections.py  line_detector.py  line_detector_interface.py  plot_detections.py
ood_detector/: package.xml  setup.cfg  setup.py
ood_detector/launch/: duckiebot_ood.launch.xml  ood_detector_node.launch.xml
ood_detector/ood_detector/: ood_detector_node.py  vae.py
stop_line_filter/: package.xml  setup.cfg  setup.py
stop_line_filter/config/: default.yaml
stop_line_filter/launch/: stop_line_filter_node.launch.xml  stop_line_filter_tester_node.launch.xml
stop_line_filter/stop_line_filter/: stop_line_filter_node.py  stop_line_filter_tester_node.py
