<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fsm</name>
  <version>1.0.0</version>
  <description>
    The finite state machine coordinates the modes of the car.
    The fsm package consists of two nodes, namely `fsm_node` and `logic_gate_node`.
  </description>
  <author email="novitzky@mit.edu">Michael Misha Novitzky</author>
  <maintainer email="mack@duckietown.org">Mack</maintainer>
  <maintainer email="nicholasganshyan@gmail.com">nicholas-gs</maintainer>
  <license>GPLv3</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>dt_interfaces_cps</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
