<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ground_projection</name>
  <version>1.0.0</version>
  <description>Project the line segments detected in the image to the ground
    plane and in the robot's reference frame</description>
  <author email="cchoi@csail.mit.edu">Changhyun Choi</author>
  <maintainer email="mack@duckietown.org">Mack</maintainer>
  <maintainer email="nicholasganshyan@gmail.com">nicholas-gs</maintainer>
  <license>GPLv3</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>dt_interfaces_cps</exec_depend>
  <exec_depend>dt_calibration_utils</exec_depend>
  <exec_depend>dt_image_processing_utils</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
