<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lane_control</name>
  <version>1.0.0</version>
  <description>Compute linear and angular velocity commands, by processing
    the estimate error in lateral deviationa and heading.
  </description>
  <author email="steven@todo.todo">steven</author>
  <author email="syliu@mit.edu">Shih-Yuan Liu</author>
  <maintainer email='paull@mit.edu'>Liam Paull</maintainer>
  <maintainer email="nicholasganshyan@gmail.com">nicholas-gs</maintainer>
  <license>GPLv3</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-numpy</exec_depend>

  <exec_depend>dt_interfaces_cps</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
